# lakebase-dbx-app-template

./: .gitignore  README.md  app.py  app.yml  create_oltp_instance.py  databricks.yml  gradio_app.py  hello_databricks.py  list_synced_tables.py  list_synced_tables.sh  pyproject.toml  requirements.txt  setup_cursor_databricks.sh  streamlit_app.py  streamlit_app_local.py  test_db_connection.py  test_local_connection.py  validate_config.py
.gradio/flagged/: dataset1.csv
